Small bug fix in habitat vs. capacity plot
If n_saved is very small, this would create and error. Now it won't

--- a/03-post-process/output-plots-children/06-capacity-vs-habitat.Rmd
+++ b/03-post-process/output-plots-children/06-capacity-vs-habitat.Rmd
@@ -23,7 +23,7 @@ wul_seq = seq(0, max(jags_data$wul) * 1.1, length = 30)
 pred_beta = t(sapply(beta_per, function(slope) wul_seq * slope))
 
 # select a subset of posterior samples at random to draw
-i = sample(1:post_dim(post, "saved"), 100, replace = FALSE)
+i = sample(1:post_dim(post, "saved"), min(100, post_dim(post, "saved")), replace = FALSE)
 
 # empty plot with correct labeling/dimensions
 par(mar = c(3,3,1,1), mgp = c(2,0.35,0), tcl = -0.15)
