--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -151,6 +151,7 @@ dummy_cols = matrix(rep(1:jags_data$nj, each = jags_data$nj), jags_data$nj, jags
 dummy_rows = matrix(rep(1:jags_data$nj, jags_data$nj), jags_data$nj, jags_data$nj)
 vcov_cols = dummy_cols[lower.tri(dummy_cols)]
 vcov_rows = dummy_rows[lower.tri(dummy_rows)]
+vcov_inds = paste0("[", vcov_rows, ",", vcov_cols, "]")
 vcov_labels = paste0(pops[vcov_rows], "-", pops[vcov_cols])
 ```
 
