--- a/03-post-process/output-plots-children/13-post-vs-prior.Rmd
+++ b/03-post-process/output-plots-children/13-post-vs-prior.Rmd
@@ -170,7 +170,7 @@ post_v_prior_pops(post_param = "alpha[pop]", prior_param = "alpha_pr", xlim = c(
 
 ```{r mu_phi_O0_O1-post-v-prior}
 post_v_prior_pops(post_param = "mu_phi_O0_O1[origin,pop]", prior_param = "mu_phi_O0_O1_pr",
-                  origin = o_nor, xlim = c(0,1)
+                  origin = o_nor, xlim = c(0,1), y_max = 0.75
 )
 ```
 
@@ -204,7 +204,7 @@ post_v_prior_pops(post_param = "mu_phi_O2_O3[origin,pop]", prior_param = "mu_phi
 
 ```{r mu_psi_O1_nor-post-v-prior}
 post_v_prior_pops(post_param = "mu_psi_O1[origin,pop]", prior_param = "mu_psi_O1_pr",
-                  origin = o_nor, xlim = c(0,1)
+                  origin = o_nor, xlim = c(0,1), y_max = 0.75
 )
 ```
 
@@ -212,7 +212,7 @@ post_v_prior_pops(post_param = "mu_psi_O1[origin,pop]", prior_param = "mu_psi_O1
 
 ```{r mu_psi_O1_hor-post-v-prior}
 post_v_prior_pops(post_param = "mu_psi_O1[origin,pop]", prior_param = "mu_psi_O1_pr",
-                  origin = o_hor, xlim = c(0,1)
+                  origin = o_hor, xlim = c(0,1), y_max = 0.75
 )
 ```
 
@@ -258,7 +258,7 @@ post_v_prior_pops(post_param = "sig_Lphi_E_Pb[pop]", prior_param = "sig_Lphi_E_P
 
 ```{r sig_lL_Pb-post-v-prior}
 post_v_prior_pops(post_param = "sig_lL_Pb[pop]", prior_param = "sig_lL_Pb_pr[pop]",
-                  xlim = c(0, 2)
+                  xlim = c(0, 1), y_max = 0.75
 )
 ```
 
@@ -294,7 +294,7 @@ post_v_prior_pops(post_param = "sig_Lphi_Pa_Mb[pop]", prior_param = "sig_Lphi_Pa
 
 ```{r sig_lDelta_L_Pb_Mb-post-v-prior}
 post_v_prior_pops(post_param = "sig_lDelta_L_Pb_Mb[pop]", prior_param = "sig_lDelta_L_Pb_Mb_pr[pop]",
-                  xlim = c(0, 2)
+                  xlim = c(0,1), y_max = 0.75
 )
 ```
 
@@ -388,7 +388,7 @@ post_v_prior_pops(post_param = "sig_Lphi_Sb_Sa[pop]", prior_param = "sig_Lphi_Sb
 
 ```{r}
 # set these figure options for all plots in this section
-y_max = 0.2
+y_max = 0.15
 xlim = c(-1,1)
 knitr::opts_chunk$set(fig.width = 5, fig.height = 6)
 ```
